--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.github.johnhiott:DarkSkyApi:v0.1.4'
+    compile 'junit:junit:4.12'
 }
